# abe

./: .dockerignore  .gitignore  .mcp.json  Cargo.toml  Dockerfile  README.md  config.example.yaml  install.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
commands/: debate.md  validate.md
docs/specs/: 2026-06-19-llm-debator-design.md
docs/superpowers/plans/: 2026-06-19-llm-debator.md
examples/: cli-debate.yaml  full-config.yaml  local-net.yaml  mixed.yaml
personas/: README.md  data-nerd.md  the-advocate.md  the-builder.md  the-buyer.md  the-ceo.md  the-challenger.md  the-cmo.md  the-community-builder.md  the-engineer.md  the-founder.md  the-strategist.md  the-yonk.md
src/: cli.rs  config.rs  debate.rs  init.rs  main.rs  mcp.rs  persona.rs  report.rs  safety.rs  server.rs  validate.rs
src/provider/: cli.rs  http.rs  mod.rs
