[package]
name = "llm-debator"
version = "0.1.0"
edition = "2021"
description = "Multi-provider LLM debate/consensus proxy (HTTP + CLI providers)"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
regex = "1"
futures = "0.3"
genai = "0.6"
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
schemars = "0.8"

[profile.release]
strip = true
