[package]
name = "abe"
version = "0.1.1"
edition = "2021"
description = "Multi-provider LLM debate/consensus proxy (HTTP + CLI providers)"
license = "MIT"
repository = "https://github.com/yonk-labs/abe"
homepage = "https://github.com/yonk-labs/abe"
keywords = ["llm", "debate", "consensus", "mcp", "ai"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "io-util", "fs", "net"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
thiserror = "1"
anyhow = "1"
regex = "1"
futures = "0.3"
genai = "0.6"
rmcp = { version = "0.16", features = ["server", "macros", "transport-io"] }
schemars = "0.8"
axum = "0.8"

[profile.release]
strip = true
